fix problem with maps on phonegap and put in basic about info

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -7,4 +7,4 @@
   height: 96px;
 }
 
-.angular-google-map-container { height: 400px; }
+.angular-google-map-container { height: 300px; }
